--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -6,10 +6,10 @@
 .input_area pre { font-size:12px; line-height:120% }
 
 /* FONT_TEXT */
-div.text_cell_render { font-family: Verdana; text-align: justify; font-size:22px;  line-height:120% }
+div.text_cell_render, div.text_cell_render span { text-align: justify; font-size:22px;  line-height:120% }
 
 /* FONT_QUOTE */
-.text_cell_render pre { font-size:16px; line-height:120% }
+div.text_cell_render pre { font-size:16px; line-height:120% }
 
 /* BACKGROUND */
 div .input_area { background-color:#000000;}
@@ -140,4 +140,18 @@ div .cm-s-default { background-color: #888888;}
 .input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } 
 
 </style>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX", "output/SVG"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "SVG": { availableFonts: ["TeX"] }
+  });
+</script>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+<script type="text/javascript" src="path-to-MathJax/MathJax.js">
+</script>
