--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -1,95 +1,94 @@
 <style>
-
 /* PRINT */
 
 /* FONT_CODE */
-div.input_area pre { font-size:12px }
+.input_area pre { font-size:12px; }
 
 /* FONT_TEXT */
-div.text_cell_render { font-size:18px }
+div.text_cell_render { font-size:28px; text-align: left }
 
 /* FONT_QUOTE */
-div.text_cell_render pre { font-size:16px }
+div.text_cell_render pre { font-size:14px; }
 
 /* BACKGROUND */
-div.input_area { background-color:#000000;}
-blockquote { background-color:#ffff66; }
+div .input_area { background-color:#333333;}
+blockquote { background-color: #FFFF66; }
 
 /* BUILTIN */
-div.input_area .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */
+.input_area .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */
 
 /* KEYWORD */
-div.input_area .highlight .k { color: #F0E68C; font-weight: bold } /* Keyword */
-div.input_area .highlight .kc { color: #F0E68C; font-weight: bold } /* Keyword.Constant */
-div.input_area .highlight .kd { color: #F0E68C; font-weight: bold } /* Keyword.Declaration */
-div.input_area .highlight .kn { color: #F0E68C; font-weight: bold } /* Keyword.Namespace */
-div.input_area .highlight .kp { color: #F0E68C; font-weight: bold } /* Keyword.Pseudo */
-div.input_area .highlight .kr { color: #F0E68C; font-weight: bold } /* Keyword.Reserved */
-div.input_area .highlight .kt { color: #F0E68C; font-weight: bold } /* Keyword.Type */
-div.input_area .highlight .ow { color: #F0E68C; font-weight: bold } /* Operator.Word */
+.input_area .highlight .k { color: #F0E68C; font-weight: bold } /* Keyword */
+.input_area .highlight .kc { color: #F0E68C; font-weight: bold } /* Keyword.Constant */
+.input_area .highlight .kd { color: #F0E68C; font-weight: bold } /* Keyword.Declaration */
+.input_area .highlight .kn { color: #F0E68C; font-weight: bold } /* Keyword.Namespace */
+.input_area .highlight .kp { color: #F0E68C; font-weight: bold } /* Keyword.Pseudo */
+.input_area .highlight .kr { color: #F0E68C; font-weight: bold } /* Keyword.Reserved */
+.input_area .highlight .kt { color: #F0E68C; font-weight: bold } /* Keyword.Type */
+.input_area .highlight .ow { color: #F0E68C; font-weight: bold } /* Operator.Word */
 
 /* VARIABLE */
-div.input_area .highlight pre { color: #FFFFFF }
-div.input_area .highlight .n { color: #FFFFFF } /* Name.Variable */
-div.input_area .highlight .nv { color: #FFFFFF } /* Name.Variable */
-div.input_area .highlight .na { color: #FFFFFF } /* Name.Attribute */
-div.input_area .highlight .no { color: #FFFFFF } /* Name.Constant */
-div.input_area .highlight .nl { color: #FFFFFF } /* Name.Label */
+.input_area .highlight pre { color: #FFFFFF }
+.input_area .highlight .n { color: #FFFFFF } /* Name.Variable */
+.input_area .highlight .nv { color: #FFFFFF } /* Name.Variable */
+.input_area .highlight .na { color: #FFFFFF } /* Name.Attribute */
+.input_area .highlight .no { color: #FFFFFF } /* Name.Constant */
+.input_area .highlight .nl { color: #FFFFFF } /* Name.Label */
 
 /* FUNCTION */
-div.input_area .highlight .nb { color: #BDB76B } /* Name.Builtin */
-div.input_area .highlight .nf { color: #BDB76B } /* Name.Function */
-div.input_area .highlight .vc { color: #BDB76B } /* Name.Variable.Class */
-div.input_area .highlight .vg { color: #BDB76B } /* Name.Variable.Global */
-div.input_area .highlight .vi { color: #BDB76B } /* Name.Variable.Instance */
-div.input_area .highlight .nc { color: #BDB76B } /* Name.Class */
-div.input_area .highlight .ni { color: #BDB76B } /* Name.Entity */
-div.input_area .highlight .ne { color: #BDB76B } /* Name.Exception */
-div.input_area .highlight .nn { color: #BDB76B } /* Name.Namespace */
-div.input_area .highlight .nt { color: #BDB76B } /* Name.Tag */
+.input_area .highlight .nb { color: #BDB76B } /* Name.Builtin */
+.input_area .highlight .nf { color: #BDB76B } /* Name.Function */
+.input_area .highlight .vc { color: #BDB76B } /* Name.Variable.Class */
+.input_area .highlight .vg { color: #BDB76B } /* Name.Variable.Global */
+.input_area .highlight .vi { color: #BDB76B } /* Name.Variable.Instance */
+.input_area .highlight .nc { color: #BDB76B } /* Name.Class */
+.input_area .highlight .ni { color: #BDB76B } /* Name.Entity */
+.input_area .highlight .ne { color: #BDB76B } /* Name.Exception */
+.input_area .highlight .nn { color: #BDB76B } /* Name.Namespace */
+.input_area .highlight .nt { color: #BDB76B } /* Name.Tag */
 
 
 
 /* OPERATOR */
-div.input_area .highlight .o { color: #FFFFFF; font-weight:bold } /* Operator */
-div.input_area .highlight .p { color: #FFFFFF; font-weight:bold } /* Operator */
+.input_area .highlight .o { color: #FFFFFF; font-weight:bold } /* Operator */
+.input_area .highlight .p { color: #FFFFFF; font-weight:bold } /* Operator */
 
 
 /* DECORATOR */
-div.input_area .highlight .nd { color: #BDB76B } /* Name.Decorator */
+.input_area .highlight .nd { color: #BDB76B } /* Name.Decorator */
 
 
 /* COMMENT */
-div.input_area .highlight .c { color: #87CEEB; font-style: italic } /* Comment */
-div.input_area .highlight .cm { color: #87CEEB; font-style: italic } /* Comment.Multiline */
-div.input_area .highlight .cp { color: #87CEEB; } /* Comment.Preproc */
-div.input_area .highlight .c1 { color: #87CEEB; font-style: italic } /* Comment.Single */
-div.input_area .highlight .cs { color: #87CEEB; font-style: italic } /* Comment.Special */
+.input_area .highlight .c { color: #87CEEB; font-style: italic } /* Comment */
+.input_area .highlight .cm { color: #87CEEB; font-style: italic } /* Comment.Multiline */
+.input_area .highlight .cp { color: #87CEEB; } /* Comment.Preproc */
+.input_area .highlight .c1 { color: #87CEEB; font-style: italic } /* Comment.Single */
+.input_area .highlight .cs { color: #87CEEB; font-style: italic } /* Comment.Special */
 
 
 /* NUMBER */
-div.input_area .highlight .mb { color: #98FB98 } /* Literal.Number.Bin */
-div.input_area .highlight .mf { color: #98FB98 } /* Literal.Number.Float */
-div.input_area .highlight .mh { color: #98FB98 } /* Literal.Number.Hex */
-div.input_area .highlight .mi { color: #98FB98 } /* Literal.Number.Integer */
-div.input_area .highlight .mo { color: #98FB98 } /* Literal.Number.Oct */
-div.input_area .highlight .m { color: #98FB98 } /* Literal.Number */
-div.input_area .highlight .il { color: #98FB98 } /* Literal.Number.Integer.Long */
+.input_area .highlight .mb { color: #98FB98 } /* Literal.Number.Bin */
+.input_area .highlight .mf { color: #98FB98 } /* Literal.Number.Float */
+.input_area .highlight .mh { color: #98FB98 } /* Literal.Number.Hex */
+.input_area .highlight .mi { color: #98FB98 } /* Literal.Number.Integer */
+.input_area .highlight .mo { color: #98FB98 } /* Literal.Number.Oct */
+.input_area .highlight .m { color: #98FB98 } /* Literal.Number */
+.input_area .highlight .il { color: #98FB98 } /* Literal.Number.Integer.Long */
 
 /* STRING */
-div.input_area .highlight .s { color: #FFA0A0 } /* Literal.String */
-div.input_area .highlight .w { color: #FFA0A0 } /* Text.Whitespace */
-div.input_area .highlight .sb { color: #FFA0A0 } /* Literal.String.Backtick */
-div.input_area .highlight .sc { color: #FFA0A0 } /* Literal.String.Char */
-div.input_area .highlight .sd { color: #FFA0A0; font-style: italic } /* Literal.String.Doc */
-div.input_area .highlight .s2 { color: #FFA0A0 } /* Literal.String.Double */
-div.input_area .highlight .se { color: #FFA0A0; font-weight: bold } /* Literal.String.Escape */
-div.input_area .highlight .sh { color: #FFA0A0 } /* Literal.String.Heredoc */
-div.input_area .highlight .si { color: #FFA0A0; font-weight: bold } /* Literal.String.Interpol */
-div.input_area .highlight .sx { color: #FFA0A0 } /* Literal.String.Other */
-div.input_area .highlight .sr { color: #FFA0A0 } /* Literal.String.Regex */
-div.input_area .highlight .s1 { color: #FFA0A0 } /* Literal.String.Single */
-div.input_area .highlight .ss { color: #FFA0A0 } /* Literal.String.Symbol */
+.input_area .highlight .s { color: #FFA0A0 } /* Literal.String */
+.input_area .highlight .w { color: #FFA0A0 } /* Text.Whitespace */
+.input_area .highlight .sb { color: #FFA0A0 } /* Literal.String.Backtick */
+.input_area .highlight .sc { color: #FFA0A0 } /* Literal.String.Char */
+.input_area .highlight .sd { color: #FFA0A0; font-style: italic } /* Literal.String.Doc */
+.input_area .highlight .s2 { color: #FFA0A0 } /* Literal.String.Double */
+.input_area .highlight .se { color: #FFA0A0; font-weight: bold } /* Literal.String.Escape */
+.input_area .highlight .sh { color: #FFA0A0 } /* Literal.String.Heredoc */
+.input_area .highlight .si { color: #FFA0A0; font-weight: bold } /* Literal.String.Interpol */
+.input_area .highlight .sx { color: #FFA0A0 } /* Literal.String.Other */
+.input_area .highlight .sr { color: #FFA0A0 } /* Literal.String.Regex */
+.input_area .highlight .s1 { color: #FFA0A0 } /* Literal.String.Single */
+.input_area .highlight .ss { color: #FFA0A0 } /* Literal.String.Symbol */
 
 
 
@@ -99,45 +98,45 @@ div.input_area .highlight .ss { color: #FFA0A0 } /* Literal.String.Symbol */
 /* JUPYTER */
 
 /* FONT_EDIT */
-div.cm-s-default  { font-size:20px; line-height:120% }
+.cm-s-default span { font-size:16px; line-height:120% }
 
 /* BACKGROUND_EDIT */
-div.cm-s-default { background-color: #888888;}
+div .cm-s-default { background-color: #888888;}
 
 /* CURSOR */
-div.input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }
-div.input_area .CodeMirror div.CodeMirror-secondarycursor { border-left: 5px solid #FFFFFF;}
-div.input_area .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #FFFFFF;}
-div.input_area .cm-animate-fat-cursor { background-color: #FFFFFF; }
-:
-:/* BUILTIN */
-div.input_area .CodeMirror .cm-builtin { color: #CD5C5C } 
-div.input_area .CodeMirror .cm-variable-2 { color: #CD5C5C } 
-div.input_area .CodeMirror .cm-variable-3 { color: #CD5C5C } 
+.input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }
+.input_area .CodeMirror div.CodeMirror-secondarycursor { border-left: 5px solid #FFFFFF;}
+.input_area .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #FFFFFF;}
+.input_area .cm-animate-fat-cursor { background-color: #FFFFFF; }
+
+/* BUILTIN */
+.input_area .cm-s-ipython span.cm-builtin { color: #CD5C5C } 
+.input_area .cm-s-ipython span.cm-variable-2 { color: #CD5C5C } 
+.input_area .cm-s-ipython span.cm-variable-3 { color: #CD5C5C } 
 
 /* KEYWORD */
-div.input_area .CodeMirror .cm-keyword { color: #F0E68C; font-weight:700 } 
+.input_area .cm-s-ipython span.cm-keyword { color: #F0E68C; font-weight:700 } 
 
 /* VARIABLE */
-div.input_area .CodeMirror .cm-variable { color: #FFFFFF } 
-div.input_area .CodeMirror .cm-def { color: #FFFFFF } 
+.input_area span.cm-variable { color: #FFFFFF } 
+.input_area span.cm-def { color: #FFFFFF } 
 
 
 /* OPERATOR */
-div.input_area ..CodeMirror .cm-operator { color: #FFFFFF; font-weight:700 } 
-div.input_area .CodeMirror  { color: #FFFFFF; font-weight:700 } 
+.input_area .cm-s-ipython span.cm-operator { color: #FFFFFF; font-weight:700 } 
+.input_area .cm-s-ipython span { color: #FFFFFF; font-weight:700 } 
 
 /* DECORATOR */
-div.input_area .CodeMirror .cm-meta { color: #BDB76B } 
+.input_area .cm-s-ipython span.cm-meta { color: #BDB76B } 
 
 /* COMMENT */
-div.input_area .CodeMirror .cm-comment { color:#87CEEB; font-style:italic } 
+.input_area .cm-s-ipython span.cm-comment { color:#87CEEB; font-style:italic } 
 
 /* NUMBER */
-div.input_area .CodeMirror .cm-number { color: #98FB98 } 
+.input_area .cm-s-ipython span.cm-number { color: #98FB98 } 
 
 /* STRING */
-div.input_area .CodeMirror .cm-string { color: #FFA0A0 } 
-div.input_area .CodeMirror .cm-string-2 { color: #FFA0A0 } 
+.input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } 
+.input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } 
 
 </style>
