--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -2,6 +2,7 @@
 /* PRINT */
 
 div.MathJax_Display {padding: 40px}
+.input_area  { padding:5px; }
 
 /* FONT_CODE */
 .input_area pre { font-size:12px; }
