--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -3,6 +3,7 @@
 
 div.MathJax_Display {padding: 40px}
 div.input_area  { padding:20px; }
+div.highlight  { padding:20px; }
 
 /* FONT_CODE */
 .input_area pre { font-size:12px; }
