--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -1,3 +1,4 @@
+<script src= 'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js'></script>
 <style>
 /* PRINT */
 div.text_cell_render table, 
