--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -1,3 +1,6 @@
+<script src=
+"https://raw.githubusercontent.com/francesco-mannella/neunet-basics/master/javascripts/ipython_notebook_toc.js">
+</script>
 <style>
 /* PRINT */
 div.text_cell_render table, 
