--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -18,7 +18,7 @@ div.text_cell_render td {
 }
 div.MathJax_Display {padding: 40px 5px 40px 5px}
 
-div.input_area  { padding: 10px; }
+div.input_area  { padding: 10px; overflow-x: scroll }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; overflow-x: hidden }
 
