--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -3,10 +3,10 @@
 /* PRINT */
 
 #toc ol {
-    font-size: 12px; 
+    font-size: 10px; 
     line-height: 120%; 
     padding: 0; 
-    margin-left: 12px; 
+    margin-left: 10px; 
     list-style-type: decimal;
 }
 
@@ -21,10 +21,10 @@ div.MathJax_Display {padding: 40px 5px 40px 5px}
 div.input_area span {white-space: nowrap;}
 div.input_area  { padding: 10px; overflow-x: scroll }
 .rendered_html p{ text-align: left }
-div.input_area>div.highlight  { padding:10px; overflow-x: hidden }
+div.input_area>div.highlight  { padding:10px; }
 
 /* FONT_CODE */
-.input_area pre { font-size:12px; line-height:120%; }
+.input_area pre { font-size:10px; line-height:120% }
 
 /* FONT_TEXT */
 div.text_cell_render { font-size:16px;  line-height:120% }
