--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -19,7 +19,10 @@ div.text_cell_render td {
 div.MathJax_Display {padding: 40px 5px 40px 5px}
 
 div.input_area  { padding: 10px;  }
-div.input_area>div.highlight  { overflow-x: scroll;  }
+div.input_area>div.highlight  { 
+    max-height:300px;
+    overflow-x: scroll;  
+}
 div.input_area>div.highlight>pre>span { white-space: nowrap;  }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
