--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -21,13 +21,11 @@ div.MathJax_Display {padding: 40px 5px 40px 5px}
 div.input_area  { padding: 10px;  }
 
 div.input_area  { 
-    min-width: 1000px !important; 
-    max-width:1000px !important; 
+    min-width: 20em !important; 
     overflow-x: hide
 } 
 div.input_area pre {  
-    min-width: 400px !important; 
-    max-width:400px !important; 
+    min-width: 20em !important; 
 }
 
 
