--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -3,10 +3,10 @@
 /* PRINT */
 
 #toc ol {
-    font-size: 16px; 
+    font-size: 20px; 
     line-height: 120%; 
     padding: 0; 
-    margin-left: 16px; 
+    margin-left: 20px; 
     list-style-type: decimal;
 }
 
@@ -30,19 +30,18 @@ div.input_area pre {
 }
 
 
-
-
+div.input_area  { padding: 10px;  }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
 
 /* FONT_CODE */
-.input_area pre { font-size:12px; line-height:120% }
+.input_area pre { font-size:10px; line-height:120% }
 
 /* FONT_TEXT */
-div.text_cell_render { font-size:16px;  line-height:120% }
+div.text_cell_render { font-size:20px;  line-height:120% }
 
 /* FONT_QUOTE */
-.text_cell_render pre { font-size:12px; line-height:120% }
+.text_cell_render pre { font-size:14px; line-height:120% }
 
 /* BACKGROUND */
 div .input_area { background-color:#333333;}
