--- a/style/ipybn.css
+++ b/style/ipybn.css
@@ -30,9 +30,9 @@ div.input_area pre {
 }
 
 
-div.input_area  { padding: 10px;  }
+div.input_area  { padding: 10px; overflow: auto  }
 .rendered_html p{ text-align: left }
-div.input_area>div.highlight  { padding:10px; }
+div.input_area>div.highlight  { padding:10px; width: 500px !important}
 
 /* FONT_CODE */
 .input_area pre { font-size:10px; line-height:120% }
